tests/error/using_expression_of_type_void_as_an_argument_to_varargs_function.c
// fail "Expression of type void cannot be used as function argument."

void varargs(int count, ...){
    
}

int main(){
    varargs(1, (void)1);
}
